         spectrum description rather than dorking around to get them from
         the converter.
Pre3 released

October 11, 2007 Pre 4 (or possibly 3.2-001) opened.

October 12, 2007 - Make multicolored monster understand Gamman deluxe spectra.
October 15, 2007 - Redid a bunch of stuff with the test data sources to 
            allow attach, re-attach , re-re attach etc.  Don't think there
            are any memory leaks.
October 23, 2007 - Add detach menu entry.. really stops processing and does an
                   attach -file /dev/null 
                 - added version specific daq locations to search path for
                   spectcldaq (gui).

November  6, 2007 - Convert to svn repository
November 26, 2007 - BZ 327 - Fix multicolored monster problems with changing spectra
                    in resopnse to tree parameter range changes.
December 4,2007   - Correct the Usage member of the calibration fit command so that
                    it reflects the change in the name of the command.

January 3, 2008   - Install splash/license.terms -> $(prefix)/splash.license
                    to comply with its license terms.
Finalized Pre-release 4 January 3, 2008

Start edit level 3.2-pre5 (may change to 3.2-001 midstream.. watch the log below).
January 7, 2008   - Fixed include license.terms in the build.
                  - GUI Attach -pipe was failing due to attempts to set
                    the value of the buffersize widget prior to the creation
                    of that widget's spinbox.
January 9, 2008   - Add needParameter virtual to CSpectrum class hierarchy.
                    this is used to know which list spectra belong in.
January 10, 2008  - Fix errors in 1d construction.
          	  - Use spectra organized by parameter to make
                    increments a bit more efficent.
		  - Use observers to maintain the flattened gate lists
                    so there's no increment time overhead.